src/objects/Dealer_EndCustomer__c.object
<CustomObject>
    <fields>
        <fullName>Dealer_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer ID</label>
        <referenceTo>Dealer__c</referenceTo>
        <relationshipLabel>Dealer_EndCustomers</relationshipLabel>
        <relationshipName>Dealer_EndCustomers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product ID</label>
        <referenceTo>CompanyProductDetails__c</referenceTo>
        <relationshipLabel>Dealer_EndCustomers</relationshipLabel>
        <relationshipName>Dealer_EndCustomers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quanity_Sold__c</fullName>
        <label>Quanity Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transaction_Id__c</fullName>
        <displayFormat>T-{0000}</displayFormat>
        <label>Transaction Id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Dealer_EndCustomer</label>
    <nameField>
        <displayFormat>DE-{0000}</displayFormat>
        <label>Dealer_EndCustomer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer_EndCustomers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>